# Upwork

./: README.md
Khanal/aquama-hotspot/: README.md  manage.py  pyproject.toml  requirements.txt
Khanal/aquama-hotspot/aquama_hotspot_site/: asgi.py  settings.py  urls.py  wsgi.py
Khanal/aquama-hotspot/django_prestashop/: apps.py  authentication.py
Khanal/aquama-hotspot/doc/: commands.md  models.md  models.plantuml  production.md
Khanal/aquama-hotspot/doc/config-exemple/: hotspot.conf
Khanal/aquama-hotspot/hotspots/: admin.py  apps.py  models.py  permissions.py  tests.py  tools.py  urls.py
Khanal/aquama-hotspot/hotspots/fixtures/: AquamaSolutionType_start.json
Khanal/aquama-hotspot/hotspots/management/commands/: import_aquama_machines_from_csv.py  sync_aquama_machines_from_hydro.py
Khanal/aquama-hotspot/hotspots/migrations/: 0001_initial.py  0002_alter_aquamamachine_location.py  0003_auto_20210715_0836.py  0004_auto_20210727_1141.py  0005_alter_aquamamachine_options.py  0006_auto_20210816_1050.py  0007_aquamamachine_rfid_reader_enabled.py  0008_aquamapointofsale_name.py  0009_location_owner.py  0010_auto_20211008_1816.py  0011_aquamapointofsale_owner.py
Khanal/aquama-hotspot/hotspots/serializers/: v1.py  v2.py
Khanal/aquama-hotspot/hotspots/views/: v1.py  v2.py
Khanal/aquama-hotspot/tests/: test_aquama_hotspot_site.py
ReactBugs/backend/: package-lock.json  package.json
ReactBugs/testhunt-main/: index.html  package-lock.json  package.json  postcss.config.js
SimpleHtmlPage/: index.html  style.css
flexylite/: db.sqlite3
flexylite/core/: urls.py  (+1 more)
(+93 files in other folders)
